src/test/deca/context/invalid/created/test-a-20.deca
class A{
    protected int x;
    protected float y;
}

class B extends A{
     int z;
     int w;
    void SetX(){
        x = z;
    }
    void setY(int w){
        y = w;
    }
}

class C extends A{
    int m;
    B b;
    protected int w;
    void SetX(){
        b.z = 10;
        x = b.w;
    }
    float toInt(float x){
        return x;
    }
}

{
    C a = new C();
    int a =a.toInt(12);
}